# hgen

./: Children.hs  Evolution.hs  EvolutionMP.hs  Genetics.hs  Hgen.cabal  LICENSE  ParEvolution.hs  Populations.hs  Tester.hs
Applications/: Salesman  Salesman.hi  Salesman.hs  SvgSalesman.hi  SvgSalesman.hs
Lib/: Counter.hi  Counter.hs  Distance.hi  Distance.hs  Notes.hi  Notes.hs  Permutation.hi  Permutation.hs  Shuffle.hi  Shuffle.hs
data/: cities.txt  euclideans.txt  salesman.conf
